--- a/templates/home.html
+++ b/templates/home.html
@@ -1,49 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nova Careers Site</title>
+    <title>{{ company_name }} Careers Site</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
-      h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        color: rgb(50, 50, 50);
-        text-align: center;
-      }
-
       #banner {
-        width: 100%;
         height: 360px;
-        object-fit: cover;
-      }
-
-      h2 {
-        font: size: 32px;
-        font-family: Roboto;
-        color: rgb(100, 100, 100);
-        text-align: center;
-      }
-
-      .bodytext {
-        font-family: Roboto;
-        color: rgb(80)80, 80);
-      }
-
-      #container {
-        max-width: 720px;
-        margin: 0 auto 0 auto;
+        width: 100%;
       }
     </style>
   </head>
   <body>
-      <div id="container">
-      <h1>Nova Careers</h1>
-      <img id="banner" src="https://nova-careers-website.rahulkrbxr.repl.co/static/banner.jpg" alt="Career banner">
-      <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam maximus maximus lacus sit amet molestie. Maecenas ut tortor augue. Etiam at libero eget sapien tincidunt sodales a et eros. Donec euismod est non lorem eleifend, accumsan iaculis ex ornare. Mauris at feugiat risus, lacinia sollicitudin ante. Sed posuere enim at purus interdum finibus. Donec dui sem, egestas vel urna in, accumsan lobortis lorem. Vestibulum ut ligula egestas, facilisis dolor at, tempus lorem. Nam laoreet nulla justo, convallis mattis nisl pharetra id.</p>
-      <h2 class="bodytext">Open Positions</h2>
-      <p>TODO - Show the jobs here</p>
-        <div style="text-align: center;">
-          <button>Contact Us</button>
-          <p>Copyright 2023, Nova</p>
+      <div class="container">
+      <h1 class="text-center mt-2 mb-4">Nova Careers</h1>
+      <img class="img-fluid" id="banner" src="https://nova-careers-website.rahulkrbxr.repl.co/static/banner.jpg" alt="Career banner">
+      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam maximus maximus lacus sit amet molestie. Maecenas ut tortor augue. Etiam at libero eget sapien tincidunt sodales a et eros. Donec euismod est non lorem eleifend, accumsan iaculis ex ornare. Mauris at feugiat risus, lacinia sollicitudin ante. Sed posuere enim at purus interdum finibus. Donec dui sem, egestas vel urna in, accumsan lobortis lorem. Vestibulum ut ligula egestas, facilisis dolor at, tempus lorem. Nam laoreet nulla justo, convallis mattis nisl pharetra id.</p>
+      <h2 class="text-center mt-2">Open Positions</h2>
+      <p>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </p>
+        <div class="text-center">
+          <button class="btn btn-primary btn-lg">Contact Us</button>
+          <p class="mt-4">Copyright 2023, Nova</p>
         </div>
     </div>
   </body>
