add some changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
       <h1 class="text-center mt-2 mb-4">Nova Careers</h1>
       <img class="img-fluid" id="banner" src="https://nova-careers-website.rahulkrbxr.repl.co/static/banner.jpg" alt="Career banner">
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam maximus maximus lacus sit amet molestie. Maecenas ut tortor augue. Etiam at libero eget sapien tincidunt sodales a et eros. Donec euismod est non lorem eleifend, accumsan iaculis ex ornare. Mauris at feugiat risus, lacinia sollicitudin ante. Sed posuere enim at purus interdum finibus. Donec dui sem, egestas vel urna in, accumsan lobortis lorem. Vestibulum ut ligula egestas, facilisis dolor at, tempus lorem. Nam laoreet nulla justo, convallis mattis nisl pharetra id.</p>
-      <h2 class="text-center mt-2">Open Positions</h2>
+      <h2 class="text-center mt-2">Job Openings</h2>
       <p>
         {% for job in jobs %}
           {% include 'jobitem.html' %}
