--- a/templates/home.html
+++ b/templates/home.html
@@ -2,47 +2,39 @@
 <html>
   <head>
     <title>{{ company_name }} Careers Site</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style>
-      #banner {
-        height: 360px;
-        width: 100%;
-        object-fit: cover;
-        margin-bottom: 16px;
-      }
-    </style>
+    {% include 'bootstrap.html' %}
+    
   </head>
   <body>
-    
     {% include 'nav.html' %}
-      <img class="img-fluid" id="banner" src="https://nova-careers-website.rahulkrbxr.repl.co/static/banner.jpg" alt="Career banner">
-      <div class="container">
+    {% include 'banner.html' %}
+    
+    <div class="container">  
+      <h1 class="text-center mt-2 mb-4">Nova Careers</h1>
+      
+      <div class="row" style="margin-bottom: 16px;">
+        <div class="col-md-6">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam maximus maximus lacus sit amet molestie. Maecenas ut tortor augue. Etiam at libero eget sapien tincidunt sodales a et eros. Donec euismod est non lorem eleifend, accumsan iaculis ex ornare. Mauris at feugiat risus, lacinia sollicitudin ante. Sed posuere enim at purus interdum finibus. Donec dui sem, egestas vel urna in, accumsan lobortis lorem. Vestibulum ut ligula egestas, facilisis dolor at, tempus lorem. Nam laoreet nulla justo, convallis mattis nisl pharetra id.
+          </p>
+        </div>
         
-        <h1 class="text-center mt-2 mb-4">Nova Careers</h1>
-        
-        <div class="row" style="margin-bottom: 16px;">
-          <div class="col-md-6">
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam maximus maximus lacus sit amet molestie. Maecenas ut tortor augue. Etiam at libero eget sapien tincidunt sodales a et eros. Donec euismod est non lorem eleifend, accumsan iaculis ex ornare. Mauris at feugiat risus, lacinia sollicitudin ante. Sed posuere enim at purus interdum finibus. Donec dui sem, egestas vel urna in, accumsan lobortis lorem. Vestibulum ut ligula egestas, facilisis dolor at, tempus lorem. Nam laoreet nulla justo, convallis mattis nisl pharetra id.
-            </p>
-          </div>
+        <div class="d-none d-md-block col-md-6">
+          <img src="/static/people.jpg" style="height: 320px; border-radius: 4px; ">
+        </div>
+      </div>
+    
+      <h2 class="text-center mt-2">Job Openings</h2>
+      <p>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </p>
           
-          <div class="d-none d-md-block col-md-6">
-            <img src="/static/people.jpg" style="height: 320px; border-radius: 4px; ">
-          </div>
+        <div class="text-center">
+          <a href="mailto:hello@nova.ai?subject=Question%20about%20Job%20Openings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20question%3A%20%3Cyour%20question%20here%3E" class="btn btn-primary btn-lg">Contact Us</a>
         </div>
       
-        <h2 class="text-center mt-2">Job Openings</h2>
-        <p>
-          {% for job in jobs %}
-            {% include 'jobitem.html' %}
-          {% endfor %}
-        </p>
-            
-          <div class="text-center">
-            <a href="mailto:hello@nova.ai?subject=Question%20about%20Job%20Openings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20question%3A%20%3Cyour%20question%20here%3E" class="btn btn-primary btn-lg">Contact Us</a>
-          </div>
-        
-      </div>
+    </div>
       
     {% include 'footer.html' %}
     
