--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -16,7 +16,8 @@
       </div>
     {% endif %}
   </div>
-  <div class="col-3">
-    <a href="mailto:hello@nova.ai?subject=Job%20Application%20for%20{{job['title']}}&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20Resume%20link%3A%20%3Cresume%20link%3E%0D%0A%0D%0AMy%20Linked%20In%3A%20%3Clinked%20in%3E" type="button" class="btn btn-outline-primary">Apply</a>
+  <div class="col-3 padding-right: 16px">
+    <!-- <a href="mailto:hello@nova.ai?subject=Job%20Application%20for%20{{job['title']}}&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20Resume%20link%3A%20%3Cresume%20link%3E%0D%0A%0D%0AMy%20Linked%20In%3A%20%3Clinked%20in%3E" type="button" class="btn btn-outline-primary">Apply</a> -->
+    <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 </div>
